add missing media and test reveal installation

--- a/misc/praesentations/lll.html
+++ b/misc/praesentations/lll.html
@@ -20,8 +20,8 @@
 <div class="reveal">
 <div class="slides">
 <section>
-<section id="slide-orgf3f2651">
-<h2 id="orgf3f2651">Einsatz von Reinforcement Learning für die Steuerung mobiler Roboter in der Logistik</h2>
+<section id="slide-org89d928d">
+<h2 id="org89d928d">Einsatz von Reinforcement Learning für die Steuerung mobiler Roboter in der Logistik</h2>
 <aside class="notes">
 <p>
 Einsatz von Reinforcement Learning für die Steuerung mobiler Roboter in der Logistik
@@ -63,8 +63,8 @@ ca. 1min.30s (1min.30s)
 </section>
 </section>
 <section>
-<section id="slide-org80ed2de">
-<h2 id="org80ed2de">Inhalt</h2>
+<section id="slide-org6552016">
+<h2 id="org6552016">Inhalt</h2>
 <aside class="notes">
 <p>
 Gliederung:
@@ -92,8 +92,8 @@ ca. 30s (2min.)
 </section>
 </section>
 <section>
-<section id="slide-org8dabce2">
-<h2 id="org8dabce2">Was ist Reinforcement Learning?</h2>
+<section id="slide-orgabdfac4">
+<h2 id="orgabdfac4">Was ist Reinforcement Learning?</h2>
 <aside class="notes">
 <ul>
 <li>kommt aus Psychologie -&gt; bestärkendes Lernen -&gt; Konditionierung</li>
@@ -116,7 +116,7 @@ ca. 1min.30s (3min.30s)
 </aside>
 <div style="display: grid; grid-template-columns: auto auto;">
 
-<div id="org37dcc31" class="figure">
+<div id="orgc779a06" class="figure">
 <p><img src="./assets/pigeon_in_skinnerBox.jpg" alt="pigeon_in_skinnerBox.jpg" height="80%," width="80%" align="center" />
 </p>
 </div>
@@ -139,8 +139,8 @@ ca. 1min.30s (3min.30s)
 </section>
 </section>
 <section>
-<section id="slide-org6eab604">
-<h2 id="org6eab604">Was ist Reinforcement Learning?</h2>
+<section id="slide-orgb884190">
+<h2 id="orgb884190">Was ist Reinforcement Learning?</h2>
 <aside class="notes">
 <ul>
 <li>kommt aus Psychologie -&gt; bestärkendes Lernen -&gt; Konditionierung</li>
@@ -175,8 +175,8 @@ ca. 1min.30s (3min.30s)
 </section>
 </section>
 <section>
-<section id="slide-org0bd9a09">
-<h2 id="org0bd9a09">Markov Decision Process</h2>
+<section id="slide-org2d9c37d">
+<h2 id="org2d9c37d">Markov Decision Process</h2>
 <aside class="notes">
 <ul>
 <li>Beschreibt ein Markov Decision Process -&gt; Grundlage für RL</li>
@@ -193,7 +193,7 @@ ca. 1min (4min.30s)
 </aside>
 
 
-<div id="org921f8f8" class="figure">
+<div id="orgd211708" class="figure">
 <p><img src="assets/mdp.svg" alt="mdp.svg" class="org-svg" height="30%," width="30%" align="center" />
 </p>
 </div>
@@ -209,8 +209,8 @@ sodass \[S_0, A_0, R_1, S_1, A_1, R_2, S_2, A_2, R_3, ..., R_T\]
 </section>
 </section>
 <section>
-<section id="slide-org9c25432">
-<h2 id="org9c25432">Reward&#x2026;</h2>
+<section id="slide-orgcb0f77b">
+<h2 id="orgcb0f77b">Reward&#x2026;</h2>
 <aside class="notes">
 <ul>
 <li>ganz natürlich will man Gewinn maximieren</li>
@@ -233,8 +233,8 @@ Reward = Gewinn \(\Rightarrow\) MAXIMIEREN!
 </section>
 </section>
 <section>
-<section id="slide-org25a7c26">
-<h2 id="org25a7c26">&#x2026; was könnte wohl schief gehen?</h2>
+<section id="slide-org6ddc98c">
+<h2 id="org6ddc98c">&#x2026; was könnte wohl schief gehen?</h2>
 <aside class="notes">
 <ul>
 <li>schlankes Framework/einfache Idee</li>
@@ -247,12 +247,12 @@ Reward = Gewinn \(\Rightarrow\) MAXIMIEREN!
 
 </ul>
 <p>
-ca. 1min. (6min.)    
+ca. 1min. (6min.)
 </p>
 
 </aside>
 
-<div id="org8a56a70" class="figure">
+<div id="org6e3a8f5" class="figure">
 <p><img src="./assets/pigeon_glitch.png" alt="pigeon_glitch.png" class="fragment appear" height="50%," width="50%" align="center" />
 </p>
 </div>
@@ -266,8 +266,8 @@ ca. 1min. (6min.)
 </section>
 </section>
 <section data-transition="zoom">
-<section id="slide-org557180f" data-transition="zoom">
-<h2 id="org557180f">RL bei Robotern</h2>
+<section id="slide-org3a648aa" data-transition="zoom">
+<h2 id="org3a648aa">RL bei Robotern</h2>
 <aside class="notes">
 <ul>
 <li>wie kann man das nun bei Robotern nutzen?</li>
@@ -276,7 +276,7 @@ ca. 1min. (6min.)
 
 </aside>
 
-<div id="org3e9ab49" class="figure">
+<div id="org9f72ceb" class="figure">
 <p><img src="assets/mdp.svg" alt="mdp.svg" class="org-svg" height="30%," width="30%" align="center" />
 </p>
 </div>
@@ -284,8 +284,8 @@ ca. 1min. (6min.)
 </section>
 </section>
 <section data-transition="zoom">
-<section id="slide-org7d420c7" data-transition="zoom">
-<h2 id="org7d420c7">RL bei Robotern</h2>
+<section id="slide-org3edb620" data-transition="zoom">
+<h2 id="org3edb620">RL bei Robotern</h2>
 <aside class="notes">
 <ul>
 <li>Agent = Roboter</li>
@@ -300,7 +300,7 @@ ca. 1min. (7min.)
 
 </aside>
 
-<div id="org7835aef" class="figure">
+<div id="org77281ac" class="figure">
 <p><img src="assets/mdp2.svg" alt="mdp2.svg" class="org-svg" height="80%," width="80%" align="center" />
 </p>
 </div>
@@ -308,8 +308,8 @@ ca. 1min. (7min.)
 </section>
 </section>
 <section>
-<section id="slide-org6d14575">
-<h2 id="org6d14575">Fragestellungen</h2>
+<section id="slide-orgffdab3b">
+<h2 id="orgffdab3b">Fragestellungen</h2>
 <aside class="notes">
 <ul>
 <li>daraus entstehen ganz natürlich mehrere Fragestellungen</li>
@@ -350,8 +350,8 @@ ca. 30s (7min.30s)
 </section>
 </section>
 <section>
-<section id="slide-orgee4946c">
-<h2 id="orgee4946c">Aktuelle Themen</h2>
+<section id="slide-org2dd3fa2">
+<h2 id="org2dd3fa2">Aktuelle Themen</h2>
 <aside class="notes">
 <ul>
 <li>daraus ergeben sich aktuelle Themen
@@ -385,8 +385,8 @@ ca. 1min. (8min.30s)
 </section>
 </section>
 <section>
-<section id="slide-org5997ff3">
-<h2 id="org5997ff3">Reinforcement Learning Allgemein</h2>
+<section id="slide-org188755b">
+<h2 id="org188755b">Reinforcement Learning Allgemein</h2>
 <aside class="notes">
 <ul>
 <li>Implementation von neuronalen Netzen in Robotern?</li>
@@ -412,8 +412,8 @@ ca. 20s (8min.50s)
 </section>
 </section>
 <section>
-<section id="slide-orgf0a6bc0">
-<h2 id="orgf0a6bc0">Unterschied zu anderen Reglern?</h2>
+<section id="slide-org1eb3a1a">
+<h2 id="org1eb3a1a">Unterschied zu anderen Reglern?</h2>
 <aside class="notes">
 <ul>
 <li>Unterschied zu anderen Reglern</li>
@@ -432,8 +432,8 @@ ca. 10s (8min.)
 </section>
 </section>
 <section>
-<section id="slide-orga78bc51">
-<h2 id="orga78bc51">Reward Funktion</h2>
+<section id="slide-org91ddc31">
+<h2 id="org91ddc31">Reward Funktion</h2>
 <aside class="notes">
 <ul>
 <li>Allgemeine Konstruktion der Funktion</li>
@@ -462,8 +462,8 @@ ca. 30s (8min.30s)
 </section>
 </section>
 <section>
-<section id="slide-org4b883eb">
-<h2 id="org4b883eb">SIM2REAL</h2>
+<section id="slide-orgbdde808">
+<h2 id="orgbdde808">SIM2REAL</h2>
 <aside class="notes">
 <ul>
 <li>Einfluss der Reward Funktion auf Übertragbarkeit in Realität</li>
@@ -491,8 +491,8 @@ Mehrere Fragestellungen:
 </section>
 </section>
 <section>
-<section id="slide-org9dd13c8">
-<h2 id="org9dd13c8">sim&#x2026;</h2>
+<section id="slide-org037fc5f">
+<h2 id="org037fc5f">sim&#x2026;</h2>
 <aside class="notes">
 <ul>
 <li>eigene Forschung bei SIM2REAL</li>
@@ -514,8 +514,8 @@ Mehrere Fragestellungen:
 </section>
 </section>
 <section>
-<section id="slide-org7a86ab0">
-<h2 id="org7a86ab0">&#x2026;2real</h2>
+<section id="slide-org0c08ca6">
+<h2 id="org0c08ca6">&#x2026;2real</h2>
 <div style="display: grid; grid-template-columns: 50% 50%;">
 <p>
  <video data-autoplay loop muted width= 80% src= ./assets/tb4_real_first.mp4></video>
@@ -528,8 +528,8 @@ Mehrere Fragestellungen:
 </section>
 </section>
 <section>
-<section id="slide-org3d06f6b">
-<h2 id="org3d06f6b">Digitaler Zwilling</h2>
+<section id="slide-org16fab0d">
+<h2 id="org16fab0d">Digitaler Zwilling</h2>
 <aside class="notes">
 <ul>
 <li>alles fließt in digitalen Zwilling zusammen</li>
@@ -542,8 +542,8 @@ Mehrere Fragestellungen:
 </section>
 </section>
 <section>
-<section id="slide-orgbe17fad">
-<h2 id="orgbe17fad">&#x2026; eines Roboterarms</h2>
+<section id="slide-org1fc0d44">
+<h2 id="org1fc0d44">&#x2026; eines Roboterarms</h2>
 <aside class="notes">
 <ul>
 <li>Roboterarm: komplexer als TurtleBot</li>
@@ -554,18 +554,18 @@ Mehrere Fragestellungen:
 </aside>
 <div style="display: grid; grid-template-columns: 50% 50%;">
 <p>
- <video data-autoplay loop muted width= 80% src= ./assets/so100_shadow_sim_full.mp4></video>
+ <video data-autoplay loop muted width= 80% src= ./assets/so100_shadow_sim_half.mp4></video>
 </p>
 
 <p>
- <video data-autoplay loop muted width= 80% src= ./assets/so100_shadow_real_full.mp4></video>
+ <video data-autoplay loop muted width= 80% src= ./assets/so100_shadow_real_half.mp4></video>
 </p>
 <div class="slide-footer">Einsatz von Reinforcement Learning für die Steuerung mobiler Roboter in der Logistik | M.Eng. Eric Plaß | Prof. Dr. André Ludwig | Prof. Dr. rer. nat. Martin Gürtler</div>
 </section>
 </section>
 <section>
-<section id="slide-org0507814">
-<h2 id="org0507814">&#x2026; eines Roboterarms</h2>
+<section id="slide-orge5be45d">
+<h2 id="orge5be45d">&#x2026; eines Roboterarms</h2>
 <aside class="notes">
 <ul>
 <li>Im Logistischen Kontext dort mit RL schon viel Möglich</li>
@@ -577,30 +577,30 @@ Mehrere Fragestellungen:
 </aside>
 <div style="display: grid; grid-template-columns: 50% 50%;">
 <p>
- <video data-autoplay loop muted width= 80% src= ./assets/so100_twin_sim_full.mp4></video>
+ <video data-autoplay loop muted width= 80% src= ./assets/so100_twin_sim_half.mp4></video>
 </p>
 
 <p>
- <video data-autoplay loop muted width= 80% src= ./assets/so100_twin_real_full.mp4></video>
+ <video data-autoplay loop muted width= 80% src= ./assets/so100_twin_real_half.mp4></video>
 </p>
 
 <p>
- <video data-autoplay loop muted width= 80% src= ./assets/so100_twin_sim_2_full.mp4></video>
+ <video data-autoplay loop muted width= 80% src= ./assets/so100_twin_sim_2_half.mp4></video>
 </p>
 
 <p>
- <video data-autoplay loop muted width= 80% src= ./assets/so100_twin_real_2_full.mp4></video>
+ <video data-autoplay loop muted width= 80% src= ./assets/so100_twin_real_2_half.mp4></video>
 </p>
 <div class="slide-footer">Einsatz von Reinforcement Learning für die Steuerung mobiler Roboter in der Logistik | M.Eng. Eric Plaß | Prof. Dr. André Ludwig | Prof. Dr. rer. nat. Martin Gürtler</div>
 </section>
-<section id="slide-orgba728b9">
-<h3 id="orgba728b9">Live Demo</h3>
+<section id="slide-orgf1201e4">
+<h3 id="orgf1201e4">Live Demo</h3>
 <div class="slide-footer">Einsatz von Reinforcement Learning für die Steuerung mobiler Roboter in der Logistik | M.Eng. Eric Plaß | Prof. Dr. André Ludwig | Prof. Dr. rer. nat. Martin Gürtler</div>
 </section>
 </section>
 <section>
-<section id="slide-orgcccf83b">
-<h2 id="orgcccf83b">&#x2026; eines mobilen Roboters</h2>
+<section id="slide-org5f6a369">
+<h2 id="org5f6a369">&#x2026; eines mobilen Roboters</h2>
 <aside class="notes">
 <ul>
 <li>Tatsächlich ein mobiler Roboter mit Arm (hier noch nicht modelliert)</li>
@@ -611,18 +611,18 @@ Mehrere Fragestellungen:
 
 </aside>
 <p>
- <video data-autoplay controls loop muted width= 100% src= ./assets/go2_twin.mp4></video>
+ <video data-autoplay controls loop muted width= 100% src= ./assets/go2_twin_mobile.mp4></video>
 </p>
 <div class="slide-footer">Einsatz von Reinforcement Learning für die Steuerung mobiler Roboter in der Logistik | M.Eng. Eric Plaß | Prof. Dr. André Ludwig | Prof. Dr. rer. nat. Martin Gürtler</div>
 </section>
-<section id="slide-orgb4588fc">
-<h3 id="orgb4588fc">Live Demo</h3>
+<section id="slide-org79b7acb">
+<h3 id="org79b7acb">Live Demo</h3>
 <div class="slide-footer">Einsatz von Reinforcement Learning für die Steuerung mobiler Roboter in der Logistik | M.Eng. Eric Plaß | Prof. Dr. André Ludwig | Prof. Dr. rer. nat. Martin Gürtler</div>
 </section>
 </section>
 <section>
-<section id="slide-org48ba25a">
-<h2 id="org48ba25a">Laufen lernen</h2>
+<section id="slide-orgef5c515">
+<h2 id="orgef5c515">Laufen lernen</h2>
 <p>
 Wie lange braucht man um laufen zu lernen?
 </p>
@@ -630,8 +630,8 @@ Wie lange braucht man um laufen zu lernen?
 </section>
 </section>
 <section>
-<section id="slide-orga594fbf">
-<h2 id="orga594fbf">einfacher Fall</h2>
+<section id="slide-org037e96d">
+<h2 id="org037e96d">einfacher Fall</h2>
 <aside class="notes">
 <ul>
 <li>einfaches Laufen
@@ -659,8 +659,8 @@ BUT 4096 Robots -&gt; *4096 perceived timesteps
 </section>
 </section>
 <section>
-<section id="slide-orga3a6c3e">
-<h2 id="orga3a6c3e">einfacher Fall</h2>
+<section id="slide-org0d84e6b">
+<h2 id="org0d84e6b">einfacher Fall</h2>
 <aside class="notes">
 <p>
 39419904*(1/60)*seconds = 7.6days simulated
@@ -681,7 +681,7 @@ BUT 4096 Robots -&gt; *4096 perceived timesteps
 <div class="org-src-container">
 
 <pre   ><code class="text" >################################################################################
-                       Learning iteration 400/401                       
+                       Learning iteration 400/401
 
                        Computation: 199913 steps/s (collection: 0.255s, learning 0.236s)
                Value function loss: 0.0000
@@ -707,8 +707,8 @@ Mean episode rew_similar_to_default: -0.1005
 </section>
 </section>
 <section>
-<section id="slide-org5faeed3">
-<h2 id="org5faeed3">komplexer Fall</h2>
+<section id="slide-org5e53fa5">
+<h2 id="org5e53fa5">komplexer Fall</h2>
 <aside class="notes">
 <ul>
 <li>mehrere Laufarten
@@ -728,8 +728,8 @@ Mean episode rew_similar_to_default: -0.1005
 </section>
 </section>
 <section>
-<section id="slide-orge3808a9">
-<h2 id="orge3808a9">komplexer Fall</h2>
+<section id="slide-org93421a6">
+<h2 id="org93421a6">komplexer Fall</h2>
 <aside class="notes">
 <p>
 3262531200*(1/60)*seconds = 629.3 days = 1.7241 years simulated
@@ -778,8 +778,8 @@ Mean episode rew_similar_to_default: -0.1005
 </section>
 </section>
 <section>
-<section id="slide-orgc34f3ac">
-<h2 id="orgc34f3ac">Vielen Dank für Ihre Aufmerksamkeit</h2>
+<section id="slide-orgec276b1">
+<h2 id="orgec276b1">Vielen Dank für Ihre Aufmerksamkeit</h2>
 <p>
  <video data-autoplay controls loop muted width= 80% src= ./assets/go2_standup.mp4></video>
 </p>
@@ -787,8 +787,8 @@ Mean episode rew_similar_to_default: -0.1005
 </section>
 </section>
 <section>
-<section id="slide-orgce98f37">
-<h2 id="orgce98f37">Vielen Dank für Ihre Aufmerksamkeit</h2>
+<section id="slide-orgba761f2">
+<h2 id="orgba761f2">Vielen Dank für Ihre Aufmerksamkeit</h2>
 <hr />
 
 <p>
